# trAIder

./: LICENSE  README.md  pyproject.toml
analyst/: prompts.py  runner.py  ta_tools.py  trAIder.py
trAIder/: prompts.py  runner.py  ta_tools.py  traider.py
traider/: keywant.py  runner.py  ta_tools.py
